Remove stream and ordering allocations from monomial hot paths